# SmartHome

./: README.org  pyproject.toml
smarthome/: callbacks.py  index.py  layouts.py
smarthome/apps/boardgames/: #layouts.py#  .#layouts.py  config.py  layouts.py  sidebar.py  style.py
smarthome/apps/boardgames/content/: contents.py  update_write_data.py
smarthome/apps/boardgames/scrape/: get_users_data.py
smarthome/apps/homepage/: layouts.py
tests/: test_smarthome.py
