[tool.poetry]
name = "SmartHome"
version = "0.1.0"
description = ""
authors = ["Christian Gustad <christian.gustad@cognite.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.1.0"
dash-bootstrap-components = "^1.0.2"
requests = "^2.27.1"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
